@@ -558,6 +558,7 @@ LISPSYM(package_use_list,"PACKAGE-USE-LIST",lisp)
 LISPSYM(package_used_by_list,"PACKAGE-USED-BY-LIST",lisp)
 LISPSYM(package_shadowing_symbols,"PACKAGE-SHADOWING-SYMBOLS",lisp)
 LISPSYM(package_lock,"PACKAGE-LOCK",ext)
+LISPSYM(package_case_sensitive_p,"PACKAGE-CASE-SENSITIVE-P",ext)
 LISPSYM(set_package_lock,"%SET-PACKAGE-LOCK",system)
 LISPSYM(symbol_value_lock,"SYMBOL-VALUE-LOCK",system)
 LISPSYM(check_package_lock,"CHECK-PACKAGE-LOCK",system)
