@@ -280,7 +280,7 @@
    long-float-digits package-lock hash-table-weak-p weak-key-value-table
    the-environment arglist getenv special-variable-p list-length-dotted
    *driver* *break-driver* *args* *keyboard-input* clhs-root shell execute
-   define-hash-table-test
+   define-hash-table-test package-case-sensitive-p
    ;; declarations
    constant-inline constant-notinline
    ;; pseudo-types:
