@@ -633,6 +633,7 @@ LISPFUNNR(package_use_list,1)
 LISPFUNNR(package_used_by_list,1)
 LISPFUNNR(package_shadowing_symbols,1)
 LISPFUNNR(package_lock,1)
+LISPFUNNR(package_case_sensitive_p,1)
 LISPFUNN(set_package_lock,2)
 LISPFUNN(symbol_value_lock,1)
 LISPFUNN(check_package_lock,3)
